# squanch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp
nutsack/: CMakeLists.txt
nutsack/include/nutsack/: nutsack.h
nutsack/include/nutsack/nutsack/: app.h  close_event.h  core.h  entry_point.h  event.h  key_event.h  logger.h  mouse_event.h  window.h
nutsack/src/: app.cpp  entry_point.cpp  event.h  lib.cpp  lib.h  logger.cpp  window.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp  sandbox.cpp  sandbox.h
squanch/: CMakeLists.txt
squanch/dependencies/spdlog/: CMakeLists.txt
squanch/include/squanch/: squanch.h
squanch/include/squanch/squanch/: app.h  close_event.h  core.h  entry_point.h  event.h  key_event.h  logger.h  mouse_event.h  window.h
squanch/src/: app.cpp  entry_point.cpp  logger.cpp  window.cpp
tests/: CMakeLists.txt
tests/sandbox/: CMakeLists.txt
tests/squanch/: CMakeLists.txt
tests/squanch/src/: main.cpp
